<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/input_eat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/eat_input_hint"
        android:inputType="textAutoComplete"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:paddingTop="24dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/button_input_eat_ok"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_ok" />

        <Button
            android:id="@+id/button_input_eat_cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_cancel" />
    </LinearLayout>

</LinearLayout>