<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="vn.momo.eatup.ui.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button_input_eat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onEatInputClicked"
            android:text="@string/eat_input_hint" />

        <Button
            android:id="@+id/button_get_eatwhat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onEatSuggestionClicked"
            android:text="@string/eat_suggestion_hint"
            app:layout_constraintTop_toBottomOf="@+id/button_input_eat"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/eatup_suggestion"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:textStyle="bold|italic"
            app:layout_constraintTop_toBottomOf="@+id/button_get_eatwhat"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/eatup_suggestion_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold|italic"
            app:layout_constraintTop_toBottomOf="@+id/eatup_suggestion"
            app:layout_constraintVertical_bias="0.0" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:onClick="onSaveToCloudClicked"
        android:text="@string/btn_save_to_cloud"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
